--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,4 +26,6 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
+        pip install pytest-cov
         pip install -e .
+        pytest --cov=dpipe
